--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+
+img:hover {
+  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+}
+</style>
+</head>
 <body>
 
 <h1>OneFabb</h1>
-<p>Get yourself connected.</p>
+<p>Get Yourself Connected</p>
+
+
+<h2>Thumbnail Image</h2>
+<p>Click on the image to enlarge it.</p>
+
+<a target="_blank" href="icononefabb.png">
+  <img src="icononefabb.png" alt="Forest" style="width:150px">
+</a>
 
 </body>
 </html>
