--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<a target="_blank" href="icononefabb.png">
+  <img src="icononefabb.png" alt="Forest" style="width:150px">
+</a>
+
+<h1>OneFabb</h1>
+<p>Get Yourself Connected</p>
+
+
+<h2>Broadband Services at Barabanki.</h2>
+
+
+
+
 <style>
 img {
   border: 1px solid #ddd;
@@ -17,16 +31,8 @@ img:hover {
 </head>
 <body>
 
-<h1>OneFabb</h1>
-<p>Get Yourself Connected</p>
 
 
-<h2>Thumbnail Image</h2>
-<p>Click on the image to enlarge it.</p>
-
-<a target="_blank" href="icononefabb.png">
-  <img src="icononefabb.png" alt="Forest" style="width:150px">
-</a>
 
 </body>
 </html>
