--- a/index.html
+++ b/index.html
@@ -1,31 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-img {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
-  width: 150px;
-}
 
-img:hover {
-  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-}
-</style>
+<title>OneFabb- FTTH</title>
 
-<a target="_blank" href="icononefabb.png">
-  <img src="icononefabb.png" alt="Forest" style="width:150px">
-</a>
 
-<h1>OneFabb</h1>
-<p>Get Yourself Connected</p>
-<h2>Broadband Services at Barabanki.</h2>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-</head>
+<link rel="stylesheet" type="text/css" href="../CSScode/style.css">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100;0,200;0,400;1,500&display=swap" rel="stylesheet">
+
+</head>  
 <body>
 
+	<section class="header">
+		<nav>
+			<a href="index.html">
+				<img src="../Images/icononefabb.png""> 
+				<p1>ONEFABB<p1> 
+
+				</a>
+
+			<div class="nav-links">
+
+				<ul>
+					<li><a href="">HOME</a></li>
+					<li><a href="">ABOUT</a></li>
+					<li><a href="">SERVICES</a></li>
+					<li><a href="">NEWS</a></li>
+					<li><a href="">CONTACT</a></li>
+
+				</ul>
+			</div>
+
+		</nav>
+	</section>
 	
 </body>
 </html>
