--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 				<input type="email" name = "email" placeholder="Enter Your mail address" required>
 				<input type="text" name="subject" placeholder="Enter Your Subject" required>
 				<textarea rows="8" name="message" placeholder="Message" required> </textarea> 
-				<button type="submit" class="hero-btn red-btn"> send Message</button>
+				<input type="submit" value="Submit">
 
 
 			</form>
