--- a/contact.html
+++ b/contact.html
@@ -84,15 +84,16 @@
 		</div>
 		<div class="contact-col">
 
-			<form action="filehandler.php">  
-				<input type="text" name="name" placeholder="Enter Your Name" required>
-				<input type="email" name = "email" placeholder="Enter Your mail address" required>
-				<input type="text" name="subject" placeholder="Enter Your Subject" required>
-				<textarea rows="8" name="message" placeholder="Message" required> </textarea> 
-				<input type="submit" value="Submit">
-
-
-			</form>
+			<form action="mail.php" method="post">
+   			 <label for="name">Your Name</label>
+  			 <input type="text"  name="name" placeholder="Your name..">
+   			 <label for="lname">Email</label>
+    			 <input type="email"  name="email" placeholder="Your email..">
+   
+    			<label for="message">Message</label>
+    			<textarea  name="message" placeholder="Write something.." style="height:200px"></textarea>
+    			<input type="submit" value="Submit">
+  			</form>
 			
 		</div>
 	</div>
