--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 					<li><a href="index.html">HOME</a></li>
 					<li><a href="about.html">ABOUT</a></li>
 					<li><a href="services.html">SERVICES<a></li>
-					<li><a href="index.html">NEWS</a></li>
+					<li><a href="index.html">FTT-X PRODUCTS</a></li>
 					<li><a href="contact.html">CONTACT</a></li>
 				</ul>
 			</div>
