--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
 		</div>
 		<div class="contact-col">
 
-			<form action="mail.php" method="post">
+			<form action="mail.php" method="POST">
    			 <label for="name">Your Name</label>
   			 <input type="text"  name="name" placeholder="Your name..">
    			 <label for="lname">Email</label>
